Update Finding_Donors .ipynb

--- a/Finding Donors/Finding_Donors .ipynb
+++ b/Finding Donors/Finding_Donors .ipynb
@@ -14,7 +14,7 @@
    "source": [
     "This project will test out several supervised algorithms to accurately model individuals’ income using data collected from the 1994 U.S. Census. We will then choose the best candidate algorithm from preliminary results and further optimize this algorithm to best model the data. The goal with is to construct a model that accurately predicts whether an individual makes more than $50,000. This sort of task can arise in a non-profit setting, where organizations survive on donations. Understanding an individual’s income can help a non-profit better understand how large of a donation to request, or whether or not they should reach out to begin with. While it can be difficult to determine an individual’s general income bracket directly from public sources, we can infer this value from other publically available features.\n",
     "\n",
-    "The dataset for this project originates from the [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Census+Income). The datset was donated by Ron Kohavi and Barry Becker, after being published in the article _\"Scaling Up the Accuracy of Naive-Bayes Classifiers: A Decision-Tree Hybrid\"_. You are welcome to read the article by Ron Kohavi [online](https://www.aaai.org/Papers/KDD/1996/KDD96-033.pdf). The data we investigate here consists of small changes to the original dataset, such as removing the `'fnlwgt'` feature and records with missing or ill-formatted entries."
+    "The dataset for this project originates from the [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/datasets/Census+Income). The dataset was donated by Ron Kohavi and Barry Becker, after being published in the article _\"Scaling Up the Accuracy of Naive-Bayes Classifiers: A Decision-Tree Hybrid\"_. You are welcome to read the article by Ron Kohavi [online](https://www.aaai.org/Papers/KDD/1996/KDD96-033.pdf). The data we investigate here consists of small changes to the original dataset, such as removing the `'fnlwgt'` feature and records with missing or ill-formatted entries."
    ]
   },
   {
@@ -590,7 +590,7 @@
    "metadata": {},
    "source": [
     "### Metrics and the Naive Predictor\n",
-    "*CharityML*, equipped with their research, knows individuals that make more than \\$50,000 are most likely to donate to their charity. Because of this, *CharityML* is particularly interested in predicting who makes more than \\$50,000 accurately. It would seem that using **accuracy** as a metric for evaluating a particular model's performace would be appropriate. Additionally, identifying someone that *does not* make more than \\$50,000 as someone who does would be detrimental to *CharityML*, since they are looking to find individuals willing to donate. Therefore, a model's ability to precisely predict those that make more than \\$50,000 is *more important* than the model's ability to **recall** those individuals. We can use **F-beta score** as a metric that considers both precision and recall:\n",
+    "*CharityML*, equipped with their research, knows individuals that make more than \\$50,000 are most likely to donate to their charity. Because of this, *CharityML* is particularly interested in predicting who makes more than \\$50,000 accurately. It would seem that using **accuracy** as a metric for evaluating a particular model's performance would be appropriate. Additionally, identifying someone that *does not* make more than \\$50,000 as someone who does would be detrimental to *CharityML*, since they are looking to find individuals willing to donate. Therefore, a model's ability to precisely predict those that make more than \\$50,000 is *more important* than the model's ability to **recall** those individuals. We can use **F-beta score** as a metric that considers both precision and recall:\n",
     "\n",
     "$$ F_{\\beta} = (1 + \\beta^2) \\cdot \\frac{precision \\cdot recall}{\\left( \\beta^2 \\cdot precision \\right) + recall} $$\n",
     "\n",
@@ -630,7 +630,7 @@
    "metadata": {},
    "source": [
     "### Model Application\n",
-    "Here we are exploring different models and their potential to be utilixzed in this project."
+    "Here we are exploring different models and their potential to be utilized in this project."
    ]
   },
   {
@@ -643,7 +643,7 @@
     "- Real world application: Decision Trees are often used in financial analysis. A particular example of this is for credit card fraud detection. [Reference](http://openaccess.dogus.edu.tr/bitstream/handle/11376/2366/eduman_2011.pdf?sequence=1)\n",
     "- Strengths:\n",
     "  Able to handle categorical and numerical data.\n",
-    "  Doesn’t require exstensive data pre-processing, and can handle data which has not been normalized, or encoded for Machine \n",
+    "  Doesn’t require extensive data pre-processing, and can handle data which has not been normalized, or encoded for Machine \n",
     "  Learning Suitability. \n",
     "- Weaknesses:\n",
     "Complex Decision Trees do not generalize well to the data and can result in overfitting.\n",
@@ -653,7 +653,7 @@
     "\n",
     "**Support Vector Machines (SVM)**\n",
     "\n",
-    "- Real world application: Example of a real world use of SVMs include image classification and image segmentation. For example: Face detection in an image and classification of proteins in bioinformatic applications. [Reference](https://www.csie.ntu.edu.tw/~p88012/Bio_SVM.pdf)\n",
+    "- Real world application: Example of a real world use of SVMs include image classification and image segmentation. For example: Face detection in an image and classification of proteins in bioinformatics applications. [Reference](https://www.csie.ntu.edu.tw/~p88012/Bio_SVM.pdf)\n",
     "- Strengths:\n",
     "  Effective in high dimensional spaces, (computationally efficient) and can handle multiple features.\n",
     "  Kernel functions can be used to adapt to different cases, and can be completely customized if needed.  SVMs are fairly versatile.\n",
@@ -670,7 +670,7 @@
     "Simple models can be combined to build a complex model, which is computationally fast.\n",
     "- Weaknesses:\n",
     "If we have a biased underlying classifier, it will lead to a biased boosted model.\n",
-    "If using compicated \"weak learning\" models, there is a higher chance of overfitting.\n",
+    "If using complicated \"weak learning\" models, there is a higher chance of overfitting.\n",
     "- Candidacy: Ensemble methods are considered to be high quality classifiers, and adaboost is the one of most popular boosting algorithms. "
    ]
   },
@@ -730,7 +730,7 @@
     "    # TODO: Compute accuracy on test set using accuracy_score()\n",
     "    results['acc_test'] = accuracy_score(y_test,predictions_test)\n",
     "    \n",
-    "    # TODO: Compute F-score on the the first 300 training samples using fbeta_score()\n",
+    "    # TODO: Compute F-score on the first 300 training samples using fbeta_score()\n",
     "    results['f_train'] = fbeta_score(y_train[:300],predictions_train,0.5)\n",
     "        \n",
     "    # TODO: Compute F-score on the test set which is y_test\n",
@@ -1177,7 +1177,7 @@
     "\n",
     "During the training process, the Adaboost algorithm looks at instances where it has predicted poorly, and prioritizes the correct prediction of those instances in the next bout of training.\n",
     "\n",
-    "With each bout or pass, the model finds the best learner (decision tree) to incorporate into the ensemble, repeating the process for the specified number of bouts, or until the predicitons cannot be improved further.\n",
+    "With each bout or pass, the model finds the best learner (decision tree) to incorporate into the ensemble, repeating the process for the specified number of bouts, or until the predictions cannot be improved further.\n",
     "\n",
     "All the learners are then combined to make a final model, where they each attempt to predict if a person earns more than 50k or not. Usually we take the majority of the votes to make a final prediction.\n",
     "\n",
@@ -1305,13 +1305,13 @@
    "source": [
     "In my opinion, these are most important for prediction:\n",
     "\n",
-    "1. occupation: Different jobs have various payscales. Some jobs pay higher and lower than others. \n",
+    "1. occupation: Different jobs have various pay scales. Some jobs pay higher and lower than others. \n",
     "2. education: Those with higher levels of education may earn more due to higher levels of training and/or specialization.\n",
     "3. age: With age, more wealth can be acquired. \n",
     "4. sex: Unfortunately, historically men have earned more than women. \n",
     "5. workclass: The working class they belong to can also be correlated with how much money they make.\n",
     "\n",
-    "These are all ranked according the the impact I personally feel they have on a person’s income. Occupation is ranked number one as different jobs pay differently. People with higher education are more likely to earn more."
+    "These are all ranked according the impact I personally feel they have on a person’s income. Occupation is ranked number one as different jobs pay differently. People with higher education are more likely to earn more."
    ]
   },
   {
@@ -1363,7 +1363,7 @@
    "source": [
     "Of the five features predicted in the earlier section, only two of them (age, and  education-num) are included in the list of features considered most important by Adaboost, with different rankings than what I chose.\n",
     "\n",
-    "I did not consider three other important features: capital-gain, capital-loss, and hours-per-week due to not fully understanding these variables (not having much exoerience with it) and also simply just failing to understand/remember not everyone works full-time. After evaulating the meaning of capital-gain and capital-loss (profit or loss from on the sale of assets/property), it does make sense for these features to be important. Those that have earned profits from sale of assets are definitely likely to earn more (and potentially be in a higher income bracket depending on what type of assets), while those who incurred losses are likely to have had lower income. Those that work full-time will likely earn more overall than those that work part-time. "
+    "I did not consider three other important features: capital-gain, capital-loss, and hours-per-week due to not fully understanding these variables (not having much experience with it) and also simply just failing to understand/remember not everyone works full-time. After evaluating the meaning of capital-gain and capital-loss (profit or loss from on the sale of assets/property), it does make sense for these features to be important. Those that have earned profits from sale of assets are definitely likely to earn more (and potentially be in a higher income bracket depending on what type of assets), while those who incurred losses are likely to have had lower income. Those that work full-time will likely earn more overall than those that work part-time. "
    ]
   },
   {
@@ -1431,7 +1431,7 @@
    "source": [
     "On a reduced dataset, the final model’s accuracy and f-score are still incredibly similar to the full dataset. \n",
     "\n",
-    "The acccuracy is 2.62% lower, while the f-score is 4.81% lower. Even though Adaboost is relatively faster than one of the other classifiers than the others selected, It would still be beneficial to consider training on the reduced data if training time was a factor, and there are more training points to process. This decision will also depend on how important accuracy and f-scores are (or if f-score is more important than the accuracy, as the dip for that is larger than the dip in accuracy), to make a final decision. "
+    "The accuracy is 2.62% lower, while the f-score is 4.81% lower. Even though Adaboost is relatively faster than one of the other classifiers than the others selected, It would still be beneficial to consider training on the reduced data if training time was a factor, and there are more training points to process. This decision will also depend on how important accuracy and f-scores are (or if f-score is more important than the accuracy, as the dip for that is larger than the dip in accuracy), to make a final decision. "
    ]
   }
  ],
@@ -1457,3 +1457,4 @@
  "nbformat": 4,
  "nbformat_minor": 1
 }
+
